// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cover slot 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="zv-image-preview__index">1 / 0</div>
  <div class="zv-image-preview__cover">Custom Cover Content</div>
</div>
`;

exports[`close-icon prop 1`] = `
<div class="zv-image-preview" name="zv-fade"><i role="button" class="zv-icon zv-icon-close zv-image-preview__close-icon zv-image-preview__close-icon--top-right">
    <!----></i>
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="zv-image-preview__index">1 / 0</div>
</div>
`;

exports[`close-icon-position prop 1`] = `
<div class="zv-image-preview" name="zv-fade"><i role="button" class="zv-icon zv-icon-close zv-image-preview__close-icon zv-image-preview__close-icon--top-left">
    <!----></i>
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="zv-image-preview__index">1 / 0</div>
</div>
`;

exports[`index slot 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="zv-image-preview__index">Custom Index</div>
</div>
`;

exports[`lazy-load prop 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);">
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image" style="transition-duration: .3s;"><img class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-image-preview__index">1 / 3</div>
</div>
`;

exports[`render image 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image" style="transition-duration: .3s;"><img src="https://img.yzcdn.cn/1.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img src="https://img.yzcdn.cn/2.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img src="https://img.yzcdn.cn/3.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-image-preview__index">1 / 3</div>
</div>
`;

exports[`set show-index prop to false 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="zv-image-preview" name="zv-fade">
  <div class="zv-swipe zv-image-preview__swipe">
    <div class="zv-swipe__track" style="transition-duration: 500ms; width: 0px; transform: translateX(0px);">
      <div class="zv-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image" style="transition-duration: 0s; transform: scale3d(2, 2, 1) translate(0px, NaNpx);"><img src="https://img.yzcdn.cn/1.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img src="https://img.yzcdn.cn/2.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="zv-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="zv-image zv-image-preview__image"><img src="https://img.yzcdn.cn/3.png" class="zv-image__img" style="object-fit: contain;">
          <div class="zv-image__loading">
            <div class="zv-loading zv-loading--spinner"><span class="zv-loading__spinner zv-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-image-preview__index">1 / 3</div>
</div>
`;
